# My-CV-Engineering-Projects

./: .gitattributes  .gitignore  .gitignore.txt  LICENSE  README.md  app.spec  launch_notebook.bat  rule_My-CV-Engineering-Projects.md  sync-gitignore.ps1  temp_fix.py  Тестовые наглядные структуры для отображения навигации проекта.md
.continue/: config.json
CV-010_face_detection/: .coverage  .gitattributes  CV-010-app.spec  README.md  README_COMBINED.md  README_CV-010.md  check_env.py  config.json  face_detection.py  face_detection_notebook.ipynb  kill_port.bat  pyproject.toml  real_time_detection.py  requirements.txt  run_all.bat  run_server.bat  test_server.py  Резюме этапа настройки CV-окружения.md
CV-010_face_detection/.github/workflows/: ci.yml
CV-010_face_detection/ai-conversations/: 2025-12-16-full-chat-history.md
CV-010_face_detection/archives/: 20251225T165100.md  20251226T153308.md  20251226T153308A.md  20251226T153308A1.md  20251226T153308A1a.md  README-20251220100020.md  README-20251225175800.md  README_FINAL.md
CV-010_face_detection/configs/: haarcascade_frontalface_default.xml
CV-010_face_detection/docs/: CHANGELOG.md  api_reference.md  contributing.md  getting_started.md  rules.md  task-tracking.md  troubleshooting.md
CV-010_face_detection/scripts/: run_all.bat  run_server.bat
CV-010_face_detection/src/: CV-010-app.py  check_env.py  context_loader.py  face_detection.py  face_detection_core.py  face_detection_notebook.ipynb  process_faces.py  setup.py  test_face_detection.py  test_server.py
CV-010_face_detection/templates/: index.html
(+122 files in other folders)
